# mail

./: LICENSE  README.md  setup.cfg  setup.py
mail/: __init__.py  core.py
tests/: test_mail_core.py
