[metadata]
name = mail
version = attr: mail.__version__
author = Alex Macniven
author_email = alex@sunshinetechnology.co.uk
description = Mail adds support for sending emails.

[options]
python_requires = >=3.8
packages = find:

[options.extras_require]
dev = 
    pytest >= 6.2.4
    pytest-mock >= 3.6.1
    black  >= 21.67b0
    flake8 >= 3.9.2
